# flower-shop

./: Cargo.toml
src/: main.rs
src/constants/: strings.rs
src/controllers/: blog.rs  mod.rs  order.rs  product.rs  user.rs  user_address.rs
src/database/: mongo.rs
src/etc/: catchers.rs  cors.rs  hasher.rs  json_web_token.rs  mod.rs  validations.rs
src/guards/: jwt_token.rs  mod.rs
src/macro/derive/: crud.rs
src/model/: blog.rs  category.rs  mod.rs  order.rs  product.rs  user.rs  user_address.rs  wrapper.rs
src/services/: blog.rs  generic.rs  mod.rs  order.rs  product.rs  user.rs  user_address.rs
